library/database_universe/test/errors/class/constructor_named.dart
// unnamed constructor

import 'package:database_universe/database_universe.dart';

@collection
class Model {
  Model.create();

  late int id;
}
